<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MnadalArtNetworkActivity!</string>
    <string name="app_name">IdeaMosaic(Free)</string>
    <string name="buttontext_testdata">0123456789\nabcde</string>
    <string name="buttontext_testdata25">いろはにほ\nへとちるぬ\nるをわかよ\nたれそつね\nならむうい</string>
    <string name="buttontext_testdata16">いろはに\nほへとち\nるぬるを\nわかよた</string>
    <string name="buttontext_menu_think">Create Ideas</string>
    <string name="buttontext_menu_search">Search</string>
    <string name="buttontext_menu_finish">Exit</string>
    <string name="buttontext_listview_new">Add</string>
    <string name="buttontext_listview_update">Update</string>
    <string name="buttontext_listview_delete">Delete</string>
    <string name="buttontext_mosaic_previousword">Undo</string>
    <string name="buttontext_mosaic_return2listview">Return to List</string>
    <string name="tutorial_click">Click　⇒　Input Keyword</string>
    <string name="tutorial_doubleclick">DoubleClick　⇒　Next State</string>
    <string name="tutorial_leftflick">LeftFlick　⇒　Undo</string>
    <string name="toast_messageNotFoundKeyword">Your searched keyword don\&apos;t exist.</string>
    <string name="toast_messageHitKeyword">Have a Success</string>
    <string name="dialog_messageSearch">Please Input Keyword</string>
    <string name="dialog_titleSearch">Search</string>
    <string name="dialog_titleOutputDB">Output Database File</string>
    <string name="dialog_messageOutputDB">Do you output Database File, don\&apos;t you?</string>
    <string name="dialog_titleOutputCSV">Output CSV File</string>
    <string name="dialog_messageOutputCSV">Do you output CSV File, don\&apos;t you?</string>
    <string name="dialog_titleUpdate">Update</string>
    <string name="dialog_titleAdd">Add</string>
    <string name="dialog_titleAddKeyword">Add a Keyword</string>
    <string name="toast_messageFailToOutputDB">Failed to output Database File.</string>
    <string name="toast_messageOutputDB">Output Database File in sdcard/IdeaMosaic Folder</string>
    <string name="dialog_positiveButton">OK</string>
    <string name="dialog_positiveModifyButton">Update</string>
    <string name="dialog_deleteButton">Delete</string>
    <string name="dialog_negativeButton">Cansel</string>
    <string name="toast_messageFailToOutputCSV">Failed to output CSV File.</string>
    <string name="toast_messageOutputCSVForward">Output『</string>
    <string name="toast_messageOutputCSVBackward">』File in sdcard/IdeaMosaic Folder</string>
    <string name="toast_messageDoubleBookingWithCentralWord">Sorry, You cannot input the central word.</string>
    <string name="toast_messageNotChanegeCentralWord">Sorry, You cannot modify the central word.</string>
    <string name="dialog_radioBSON">Brainstorming Mode ON</string>
    <string name="dialog_radioBSOFF">Brainstorming Mode OFF</string>
    <string name="optionmenu_previousCard">Undo</string>
    <string name="optionmenu_hint">Hint</string>
    <string name="optionmenu_searchKeyword">Search Keyword</string>
    <string name="optionmenu_outputCSV">Output CSV</string>
    <string name="optionmenu_saveDB">Output DB</string>
    <string name="optionmenu_shiftBSmode">BS Mode</string>
    <string name="toast_notInputWord">You don\&apos;t input a word.</string>
    <string name="toast_maxLengthOver">This word is over character limit.</string>
    <string name="toast_addItem"> is added.</string>
    <string name="toast_falseAdd"> exsists.</string>
    <string name="toast_updateFromItem"> is replaced with </string>
    <string name="toast_updateToItem"></string>
    <string name="toast_falseUpdate">Failed to be replaced.</string>
    <string name="toast_deleteItem"> is deleted</string>
    <string name="toast_falseDelete">Failed to be deleted.</string>
    <string name="toast_notExistListItem">This list do not exist.</string>
    <string name="toast_selectListItemForPrepareToUpdate">Please click the list you want to modify.</string>
    <string name="toast_selectListItemForPrepareToDelete">Please click the list you want to delete.</string>
    <string name="edittext_limitLength">words</string>
    <string name="txt_listviewElementCount">Elements：</string>
    <string name="dialog_titleAddListItem">List Add</string>
    <string name="dialog_titleUpdateListItem">List Update</string>
    <string name="dialog_titleDeleteListItem">List Delete</string>
    <string name="dialog_messageDeleteListItemForward">Can I delete </string>
    <string name="dialog_messageDeleteListItemBackward"> ？</string>
    <string name="tutorial_explain1">①Start application and Push the button "Create Ideas". </string>
    <string name="tutorial_explain2">②Push the button "Add" on the bottom.</string>
    <string name="tutorial_explain3">③Input the ListName and Push the button "OK". This situation is to input "My Job".</string>
    <string name="tutorial_explain4">④Click the Item "My job".</string>
    <string name="tutorial_explain5">⑤Input a keyword in the central button and Push the button "OK".</string>
    <string name="tutorial_explain6">⑥Insert a keyword in the central button</string>
    <string name="tutorial_explain7_1">⑦Push one of some buttons which exist on the around, So that Input the word connected with "Job" and Select colors.</string>
    <string name="tutorial_explain7_2">This situation is to input "Cycling", and select "Blue".</string>
    <string name="tutorial_explain8_1">⑧Set the keyword and the color in clicked button.</string>
    <string name="tutorial_explain8_2">In such the point, Input keywords connected with "Job".</string>
    <string name="tutorial_explain9_1">⑨Doubleclick the selected button on the around.</string>
    <string name="tutorial_explain9_2">This situation is to doubleclick the button "game" on the upper right.</string>
    <string name="tutorial_explain10">⑩Display the selected keyword "game" in the central button, and Insert the central keyword of previous state "Job" in one of some buttons.</string>
    <string name="tutorial_explain11">⑪In such the point, Input the connected keyword. Repeat it.</string>
    <string name="tutorial_explain12">⑫ummmm…  It is irritate to display keyword "game"... think you. the following is operated.</string>
    <string name="tutorial_explain13">⑬Push the menu button and Select "BS mode"</string>
    <string name="tutorial_explain14">⑭Select "Brainstorming Mode OFF" and Push the OK button.</string>
    <string name="tutorial_explain15">⑮Push the button "Queen" on the setteing.</string>
    <string name="tutorial_explain16_1">⑯not-Display the keyword "Queen".</string>
    <string name="tutorial_explain16_2">Please Switch ""BS mode" if you want not to display the central keyword on next state.</string>
    <string name="tutorial_explain17">⑰Alse, Push the menu button and Select "hint", and display the phrase which cause you to feel easy create ideas.</string>
    <string name="tutorial_explain18">⑱For example, such touch.</string>

    <string name="tutorial_explain19">And that\&apos;s the way it is.</string>
    <string name="tutorial_btn_return">Return to Menu</string>
    <string name="tutorial_btn_prev">Previous</string>
    <string name="tutorial_btn_next">Next</string>

    <string name="pay_title">It\&apos;s free</string>
    <string name="pay_message">You can use this function for the charged version.</string>
    <string name="pay_positivebutton">Charge</string>

    <string name="pay_url">https://play.google.com/store/apps/details?id=satoshi.app.ideamosaic.english</string>

    <color name="TUTUJI">#CF4078</color>
    <color name="SORA">#89EDDE</color>
    <color name="HIMAWARI">#FFBB00</color>
    <color name="MOEGI">#97A61E</color>
    <color name="AYAME">#C573B2</color>
    <color name="SUMI">#343434</color>
    <color name="KINARI">#EAE0D5</color>
    <color name="EDOCHA">#BC8458</color>
    <color name="AKEBOMO">#FF9C77</color>

    <string name="buttontext_menu_tutorial">Tutorial</string>

    <!-- 2013/08/09 -->
    <string name="buttontext_menu_mindmap">Mindmap</string>
    <string name="mindmap_explain">Please click the list.</string>
    <string name="buttontext_mindmap_save">Save</string>
    <string name="buttontext_mindmap_cancel">Cancel</string>
    <string name="mindmap_createmessage">Create a Mindmap</string>
    <string name="toast_messageMindmap">Save a Mindmap in sdcard/IdeaMosaic Folder.</string>
    <string name= "mindmap_initMessage">Initialize</string>

    <!-- 2013/09/27 -->
    <string name = "buttontext_initHintMessage"> Output a hint if you press the button. </string>
    <string name="pay_hint_message">  You can output a various phrase with charge.</string>
    <!-- admob -->
    <string name="banner_ad_unit_id">ca-app-pub-6828851032008732/4191400807</string>

    <string-array name="str_Colors">
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Purple</item>
        <item>White</item>
        <item>Black</item>
        <item>Brown</item>
        <item>Orange</item>
    </string-array>

    <!-- season color -->
    <color name="Spring">#fef4f4</color>
    <color name="SpringGreen">#CCE198</color>
    <color name="Summer">#bce2e8</color>
    <color name="Fall">#EB6238</color>
    <color name="Winter">#E9EEF3</color>

</resources>